--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.10",
     "@tanstack/react-query": "^5.62.11",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -18,7 +19,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-spinners": "^0.15.0",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "supabase": "^2.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
